--- a/sass/pages/_indiewool.scss
+++ b/sass/pages/_indiewool.scss
@@ -174,6 +174,7 @@ margin: 0 auto;
    color: $color-indiewool;
    font-weight: bold;
    padding: 2rem;
+   min-width: 35rem;
 
    
  }
@@ -332,6 +333,9 @@ margin: 0 auto;
 
     >li {
       margin: 0 0 1.6rem 0;
+      @media only screen and (max-width: $bp-sm-mobile) {
+        font-size: 1.4rem;
+      }
     }
 
     >li::before {
@@ -486,7 +490,7 @@ margin: 0 auto;
       @media only screen and (max-width: $bp-medium) {
       grid-template-columns: 1fr;
       grid-template-rows: auto;
-      grid-gap: 0;
+      grid-gap: 4rem;
       padding: 0;
         
       }
