--- a/sass/pages/_paycrave.scss
+++ b/sass/pages/_paycrave.scss
@@ -48,10 +48,13 @@
 
  &__wrapper {
    display: grid;
-   grid-template-columns: 1fr 3fr 1fr;
+   grid-template-columns: 1fr 4fr 1fr;
    grid-template-rows:  auto;
    padding-top: 4rem;
    //text-align: center;
+   &-p {
+     grid-column: 2 / 3;
+   }
  }
 
  &__quote {
@@ -62,6 +65,7 @@
    color: $color-orange-dark;
    font-weight: bold;
    padding: 2rem;
+   min-width: 35rem;
    max-width: 45rem;
    margin: 0 auto;
 
@@ -98,6 +102,9 @@
   padding: 4rem 0 2.4rem 0;
   list-style: none;
   white-space: nowrap;
+  @media only screen and (max-width: $bp-mobile) {
+    font-size: 1.2rem;
+    }
 
   >li {
     margin: 0 0 1.6rem 0;
@@ -126,7 +133,7 @@
 
   &__wrapper {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 4fr 1fr;
 
   >p {
    display: grid;
